fix(user-privacy): shorten import